# HWAL

./: .gitignore  README.md
kr_1/: A.cc  CMakeLists.txt
les_2/homework/: CMakeLists.txt  authomata.cc  inter.cc  perm.cc  seq.cc  subset.cc  symdiff.cc
les_2/seminar/: A.cc  B.cc  CMakeLists.txt
les_3/seminar/: CMakeLists.txt  cover.cc  money.cc
